[package]
name = "changelog-glassmorphism"
version = "0.1.0"
description = "A cross-platform changelog viewer with glassmorphism design, fetching updates dynamically from GitHub"
authors = ["chronie"]
license = "MIT"
repository = "https://github.com/chronie-shizutoki/changelog-glassmorphism"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2"
